--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,7 @@ button span {
     width: 700px;
     margin-left: -10px;
     opacity: 0;
+    transition: opacity 0.5s;
 }
 /* Text Container */
 .text-container {
@@ -99,6 +100,7 @@ button span {
     margin-top: 30px;
     border-radius: 30px;
 }
+/* Control */
 .control {
     display: flex;
     align-items: center;
@@ -120,10 +122,14 @@ button span {
     background: #00986f;
     display: block;
 }
+/* OOP Classes */
 .active{
     background: green;
 }
 .active span {
     background: #fff;
     margin-left: 31px;
+}
+.on {
+    opacity: 1;
 }
